phase2_Dev/src/objects/Historical_Follow_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule__c</fullName>
        <formula>Intake_Id__c + &apos;|&apos; + Program_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FollowUp_Code__c</fullName>
        <label>FollowUp Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUp_Id__c</fullName>
        <label>FollowUp Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Id__c</fullName>
        <label>Intake Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Issue_Date__c</fullName>
        <label>Legal Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensor_Name__c</fullName>
        <label>Licensor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor__c</fullName>
        <label>Licensor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <label>Modification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_to_Legal_Date__c</fullName>
        <label>Refer to Legal Date</label>
        <type>Date</type>
    </fields>
    <label>Historical Follow Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed_Date__c</columns>
        <columns>Intake_Id__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Error_Text__c</columns>
        <columns>Follow_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HF-{0000000}</displayFormat>
        <label>Historical Follow Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Follow Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>